--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     var options = {
      
       sankey: {
-        node: {
+        node: { label: { fontName: 'Times-Roman',
+                         fontSize: 14,
+                         color: '#871b47',
+                         bold: true,
+                         italic: true } }
           colors: colors
         },
         link: {
