--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     var options = {
      
            sankey: {
-        node: {
+        node: {fontName: 'Times-Roman',
+                         fontSize: 24,
           colors: colors
         },
         link: {
